fix(ci): resolve PR check failures