@@ -6,6 +6,7 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -14,18 +15,18 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.rauio.smartdangjian.server.learning.pojo.entity.UserLearningRecord;
-import com.rauio.smartdangjian.server.learning.service.UserLearningRecordService;
-import com.rauio.smartdangjian.server.user.service.UserService;
+import com.rauio.smartdangjian.security.CurrentUserProvider;
+import com.rauio.smartdangjian.server.learning.api.LearningQueryFacade;
+import com.rauio.smartdangjian.server.learning.pojo.dto.LearningRecordDto;
 
 @ExtendWith(MockitoExtension.class)
 class LearningToolTest {
 
     @Mock
-    private UserLearningRecordService userLearningRecordService;
+    private LearningQueryFacade learningQueryFacade;
 
     @Mock
-    private UserService userService;
+    private CurrentUserProvider currentUserProvider;
 
     @InjectMocks
     private LearningTool learningTool;
@@ -33,25 +34,25 @@ class LearningToolTest {
     @Test
     @DisplayName("getRecentLearningRecord 返回用户最近 N 天学习记录")
     void getRecentLearningRecord() {
-        when(userService.getCurrentUserId()).thenReturn("1");
-        UserLearningRecord record = mock(UserLearningRecord.class);
+        when(currentUserProvider.getCurrentUserId()).thenReturn("1");
+        LearningRecordDto record = mock(LearningRecordDto.class);
         when(record.getId()).thenReturn(1L);
-        when(userLearningRecordService.getRecentByUserId("1", 7)).thenReturn(List.of(record));
+        when(learningQueryFacade.getRecentLearningRecords(1L, 7)).thenReturn(List.of(record));
 
-        List<UserLearningRecord> result = learningTool.getRecentLearningRecord(7);
+        List<Map<String, Object>> result = learningTool.getRecentLearningRecord(7);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(1L);
+        assertThat(result.getFirst()).containsEntry("id", 1L);
     }
 
     @Test
     @DisplayName("getLearningRecordOfCourse 返回用户某课程的学习记录")
     void getLearningRecordOfCourse() {
-        when(userService.getCurrentUserId()).thenReturn("1");
-        UserLearningRecord record = mock(UserLearningRecord.class);
-        when(userLearningRecordService.getByUserIdAndCourseId(1L, 1L)).thenReturn(List.of(record));
+        when(currentUserProvider.getCurrentUserId()).thenReturn("1");
+        LearningRecordDto record = mock(LearningRecordDto.class);
+        when(learningQueryFacade.getByUserIdAndCourseId(1L, 1L)).thenReturn(List.of(record));
 
-        List<UserLearningRecord> result = learningTool.getLearningRecordOfCourse("1");
+        List<Map<String, Object>> result = learningTool.getLearningRecordOfCourse("1");
 
         assertThat(result).hasSize(1);
     }
@@ -59,12 +60,11 @@ class LearningToolTest {
     @Test
     @DisplayName("getLearningRecordOfCourseChapter 返回用户某课程章节的学习记录")
     void getLearningRecordOfCourseChapter() {
-        when(userService.getCurrentUserId()).thenReturn("1");
-        UserLearningRecord record = mock(UserLearningRecord.class);
-        when(userLearningRecordService.getByUserIdAndCourseIdAndChapterId(1L, 1L, 1L))
-                .thenReturn(List.of(record));
+        when(currentUserProvider.getCurrentUserId()).thenReturn("1");
+        LearningRecordDto record = mock(LearningRecordDto.class);
+        when(learningQueryFacade.getByUserIdAndCourseIdAndChapterId(1L, 1L, 1L)).thenReturn(List.of(record));
 
-        List<UserLearningRecord> result = learningTool.getLearningRecordOfCourseChapter("1", "1");
+        List<Map<String, Object>> result = learningTool.getLearningRecordOfCourseChapter("1", "1");
 
         assertThat(result).hasSize(1);
     }
@@ -86,9 +86,9 @@ class LearningToolTest {
     @Test
     @DisplayName("getLearningRecordOfCourse 当前用户缺失时以 null userId 查询")
     void getLearningRecordOfCourseWithMissingCurrentUser() {
-        when(userLearningRecordService.getByUserIdAndCourseId(null, 1L)).thenReturn(List.of());
+        when(learningQueryFacade.getByUserIdAndCourseId(null, 1L)).thenReturn(List.of());
 
-        List<UserLearningRecord> result = learningTool.getLearningRecordOfCourse("1");
+        List<Map<String, Object>> result = learningTool.getLearningRecordOfCourse("1");
 
         assertThat(result).isEmpty();
     }
